Remove ClusterScan status responsibilities from Cluster reconciler (#103)
* generate clientset for ClusterScan API

* fix typo

* add plugin field in api

* delete unused function in clusterissue

* label clusterscan with cluster name

* update example of disconnected cluster in openapi.yaml

* check if clusterscan labels field is null before set cluster label

* do not deal ClusterScan status on Cluster reconciler

* add reason and lastTransitionTime in cluster conditions testdata

* add reason and lastTransitionTime in clusterscan conditions testdata

* fix typo

* using a verbose message for failed plugins
